--- a/www/apps/docs/content/medusa-react/overview.mdx
+++ b/www/apps/docs/content/medusa-react/overview.mdx
@@ -244,7 +244,7 @@ For example:
   </TabItem>
   <TabItem value="apikey" label="apiKey Option">
 
-    ```ts
+    ```tsx
     import { MedusaProvider } from "medusa-react"
     import Storefront from "./Storefront"
     import { QueryClient } from "@tanstack/react-query"
@@ -257,7 +257,7 @@ For example:
         <MedusaProvider
           queryClientProviderProps={{ client: queryClient }}
           baseUrl="http://localhost:9000"
-          apiKey: process.env.API_KEY
+          apiKey={process.env.API_KEY}
         >
           <Storefront />
         </MedusaProvider>
@@ -311,3 +311,491 @@ const CustomerLogin = () => {
 The refetch method is available through [Tanstack Query's useQuery hook](https://tanstack.com/query/v4/docs/react/reference/useQuery). It allows you to refetch data if a change occurs. In this case, you refetch the logged-in customer after authentication.
 
 :::
+
+---
+
+## Publishable API Key
+
+Publishable API Keys allow you to send a request to Store API routes with a pre-defined scope. You can associate the publishable API key with one or more resources, such as sales channels, then include the publishable API key in the header of your requests.
+
+The Medusa backend will infer the scope of the current request based on the publishable API key. At the moment, publishable API keys only work with sales channels.
+
+It's highly recommended to create a publishable API key and pass it as an initialization option of the Medusa client.
+
+You can learn more about publishable API keys and how to use them in [this documentation](../development/publishable-api-keys/index.mdx).
+
+### Create a Publishable API Key
+
+You can create a publishable API key either using the [admin REST APIs](../development/publishable-api-keys/admin/manage-publishable-api-keys.mdx), or using the [Medusa admin dashboard](../user-guide/settings/publishable-api-keys.mdx).
+
+### Use a Publishable API Key
+
+To use the publishable API key, pass it as a prop to the [MedusaProvider](../references/medusa_react/Providers/medusa_react.Providers.Medusa.mdx#medusaprovider).
+
+For example:
+
+```tsx
+import { MedusaProvider } from "medusa-react"
+import Storefront from "./Storefront"
+import { QueryClient } from "@tanstack/react-query"
+import React from "react"
+
+const queryClient = new QueryClient()
+
+const App = () => {
+  return (
+    <MedusaProvider
+      queryClientProviderProps={{ client: queryClient }}
+      baseUrl="http://localhost:9000"
+      publishableApiKey={process.env.PUB_API_KEY}
+    >
+      <Storefront />
+    </MedusaProvider>
+  )
+}
+
+export default App
+```
+
+---
+
+## HTTP Compression
+
+If you've enabled HTTP Compression in your Medusa backend configurations, and you want to disable it for your requests with Medusa React, you can pass the `x-no-compression` header in the `customHeaders` prop of the [MedusaProvider](../references/medusa_react/Providers/medusa_react.Providers.Medusa.mdx#medusaprovider).
+
+For example:
+
+```tsx
+import { MedusaProvider } from "medusa-react"
+import Storefront from "./Storefront"
+import { QueryClient } from "@tanstack/react-query"
+import React from "react"
+
+const queryClient = new QueryClient()
+
+const App = () => {
+  return (
+    <MedusaProvider
+      queryClientProviderProps={{ client: queryClient }}
+      baseUrl="http://localhost:9000"
+      customHeaders={{
+        "x-no-compression": true,
+      }}
+    >
+      <Storefront />
+    </MedusaProvider>
+  )
+}
+
+export default App
+```
+
+---
+
+## Expanding Fields
+
+In many hooks you'll find an `expand` property that can be accepted within one of the hooks's parameters. You can use the `expand` property to unpack an entity's relations and return them in the response.
+
+:::warning
+
+The relations you pass to `expand` replace any relations that are expanded by default in the request.
+
+:::
+
+### Expanding One Relation
+
+For example, when you retrieve products, you can retrieve their collection by passing to the `expand` query parameter the value `collection`:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    expand: "collection"
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+### Expanding Multiple Relations
+
+You can expand more than one relation by separating the relations in the `expand` query parameter with a comma.
+
+For example, to retrieve both the variants and the collection of products, pass to the `expand` query parameter the value `variants,collection`:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    expand: "variants,collection"
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+### Prevent Expanding Relations
+
+Some requests expand relations by default. You can prevent that by passing an empty expand value to retrieve an entity without any extra relations.
+
+For example:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    expand: ""
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+This would retrieve each product with only its properties, without any relations like `collection`.
+
+---
+
+## Selecting Fields
+
+In many hooks you'll find a `fields` property that can be accepted within one of the hooks's parameters. You can use the `fields` property to specify which
+fields in the entity should be returned in the response.
+
+:::warning
+
+If you pass a `fields` query parameter, only the fields you pass in the value along with the `id` of the entity will be returned in the response.
+
+:::
+
+The `fields` query parameter does not affect the expanded relations. You'll have to use the [Expand parameter](#expanding-fields) instead.
+
+### Selecting One Field
+
+For example, when you retrieve a list of products, you can retrieve only the titles of the products by passing `title` as a value to the `fields` query parameter:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    fields: "title",
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+As mentioned above, the expanded relations such as `variants` will still be returned as they're not affected by the `fields` parameter.
+
+You can ensure that only the `title` field is returned by passing an empty value to the `expand` query parameter. For example:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    fields: "title",
+    expand: ""
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+### Selecting Multiple Fields
+
+You can pass more than one field by separating the field names in the `fields` query parameter with a comma.
+
+For example, to select the `title` and `handle` of products:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    fields: "title,handle",
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+### Retrieve Only the ID
+
+You can pass an empty `fields` query parameter to return only the ID of an entity. 
+
+For example:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    fields: "",
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.id}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+You can also pair with an empty `expand` query parameter to ensure that the relations aren't retrieved as well. For example:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { products, isLoading } = useAdminProducts({
+    fields: "",
+    expand: ""
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.id}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+---
+
+## Pagination
+
+### Query Parameters
+
+In listing hooks, such as list customers or list products, you can control the pagination using the query parameters `limit` and `offset`.
+
+`limit` is used to specify the maximum number of items that can be return in the response. `offset` is used to specify how many items to skip before returning the resulting entities.
+
+You can use the `offset` query parameter to change between pages. For example, if the limit is `50`, at page one the offset should be `0`; at page two the offset should be `50`, and so on.
+
+For example, to limit the number of products retrieved:
+
+```tsx
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { 
+    products, 
+    limit,
+    offset,
+    isLoading
+  } = useAdminProducts({
+    limit: 20,
+    offset: 0
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+### Response Fields
+
+In the response of listing hooks, aside from the entities retrieved, there are three pagination-related fields returned:
+
+- `limit`: the maximum number of items that can be returned in the response.
+- `offset`: the number of items that were skipped before the entities in the result.
+- `count`: the total number of available items of this entity. It can be used to determine how many pages are there.
+
+For example, if the `count` is `100` and the `limit` is `50`, you can divide the `count` by the `limit` to get the number of pages: `100/50 = 2 pages`.
+
+### Sort Order
+
+The `order` field, available on hooks supporting pagination, allows you to sort the retrieved items by an attribute of that item. For example, you can sort products by their `created_at` attribute by setting `order` to `created_at`:
+
+```ts
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { 
+    products, 
+    isLoading
+  } = useAdminProducts({
+    order: "created_at",
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+By default, the sort direction will be ascending. To change it to descending, pass a dash (`-`) before the attribute name. For example:
+
+```ts
+import React from "react"
+import { useAdminProducts } from "medusa-react"
+
+const Products = () => {
+  const { 
+    products, 
+    isLoading
+  } = useAdminProducts({
+    order: "-created_at",
+  })
+
+  return (
+    <div>
+      {isLoading && <span>Loading...</span>}
+      {products && !products.length && <span>No Products</span>}
+      {products && products.length > 0 && (
+        <ul>
+          {products.map((product) => (
+            <li key={product.id}>{product.title}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  )
+}
+
+export default Products
+```
+
+This sorts the products by their `created_at` attribute in the descending order.
