--- a/www/apps/docs/content/references/medusa_react/types/medusa_react.AdminCancelClaimFulfillmentReq.mdx
+++ b/www/apps/docs/content/references/medusa_react/types/medusa_react.AdminCancelClaimFulfillmentReq.mdx
@@ -12,4 +12,4 @@ The cancelation details.
 
 ## Type declaration
 
-<ParameterTypes parameters={[{"name":"claim_id","type":"`string`","description":"The claim's ID.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"fulfillment_id","type":"`string`","description":"The fulfillment's ID.","optional":false,"defaultValue":"","expandable":false,"children":[]}]} />
+<ParameterTypes parameters={[{"name":"claim_id","type":"`string`","description":"The claim's ID.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"fulfillment_id","type":"`string`","description":"The fulfillment's ID.","optional":false,"defaultValue":"","expandable":false,"children":[]}]} expandUrl="https://docs.medusajs.com/medusa-react/overview#expanding-fields"/>
