--- a/www/apps/docs/content/references/medusa_react/types/medusa_react.RefreshPaymentSessionMutationData.mdx
+++ b/www/apps/docs/content/references/medusa_react/types/medusa_react.RefreshPaymentSessionMutationData.mdx
@@ -12,4 +12,4 @@ The details of the payment session to refresh.
 
 ## Type declaration
 
-<ParameterTypes parameters={[{"name":"provider_id","type":"`string`","description":"The payment provider's identifier.","optional":false,"defaultValue":"","expandable":false,"children":[]}]} />
+<ParameterTypes parameters={[{"name":"provider_id","type":"`string`","description":"The payment provider's identifier.","optional":false,"defaultValue":"","expandable":false,"children":[]}]} expandUrl="https://docs.medusajs.com/medusa-react/overview#expanding-fields"/>
